--- a/vignettes/example-workflow.Rmd
+++ b/vignettes/example-workflow.Rmd
@@ -3,7 +3,7 @@ title: "Example Workflow"
 author: "Conor Neilson"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{Example Workflow}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
